@@ -7,4 +7,4 @@
 # isn't direct code contribution is in the THANKS file.
 #
 tommyettinger https://github.com/tommyettinger
-NathanSweet https://github.com/NathanSweet
+# NathanSweet should be here, but I don't want to make him sign a CLA...
